--- a/home/wiki/App/Setup/Update/In-app.html
+++ b/home/wiki/App/Setup/Update/In-app.html
@@ -50,10 +50,10 @@
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Special:XowaAppUpdate"><a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_2" title="Special:XowaAppUpdate">Special:XowaAppUpdate</a></span>
+      <span class="mw-headline" id="Special:XowaAppUpdate"><a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_2" title="Special:XowaAppUpdate" class="xowa-visited">Special:XowaAppUpdate</a></span>
     </h2>
     <p>
-      This <a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_3" title="Special:XowaAppUpdate">Special page</a> shows all pending updates.
+      This <a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_3" title="Special:XowaAppUpdate" class="xowa-visited">Special page</a> shows all pending updates.
     </p>
     <h3>
       <span class="mw-headline" id="Opening">Opening</span>
