--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -126,7 +126,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-04-07
+          2017-05-07
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -195,7 +195,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-04-07
+          2017-05-07
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -220,76 +220,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          en.wikivoyage.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikivoyage.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikivoyage.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikivoyage.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          en.wiktionary.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2017-04-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wiktionary.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wiktionary.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -366,10 +296,10 @@
           simple.wikipedia.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
-          2017-04-01
+          2016-12-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -398,13 +328,13 @@
       </tr>
       <tr>
         <td>
-          simple1.wikipedia.org
+          simple.wikipedia.org_bak
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2016-12-01
+          2017-04-01
         </td>
         <td class='cell_center'>
         </td>
@@ -421,13 +351,13 @@
           v1
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple1.wikipedia.org")'>Import</button>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org_bak")'>Import</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple1.wikipedia.org")'>Category</button>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org_bak")'>Category</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple1.wikipedia.org")'>Search</button>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org_bak")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -438,7 +368,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-04-07
+          2017-05-06
         </td>
         <td class='cell_center'>
           2017-03-20
